Creado mediante Colaboratory

--- a/29deSeptiembre.ipynb
+++ b/29deSeptiembre.ipynb
@@ -6,7 +6,6 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOiEu0RICXEaZ3l01oy4qe/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,30 +34,34 @@
         "colores = ['rojo', 'azul', 'verde', 'morado', 'violeta']\n",
         "nombre = 'Alberto'"
       ],
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "V-nYDN17vKql",
-        "outputId": "6a138b7d-efd5-477a-d342-b9c0f0c98916",
+        "outputId": "6ae58993-bc93-4d2b-c3c4-876c835302c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 85
         }
       },
       "source": [
         "print(edad)\n",
-        "print(colores)"
+        "print(colores)\n",
+        "print(colores[3])\n",
+        "print(colores[3][2:4])"
       ],
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "10\n",
-            "['rojo', 'azul', 'verde', 'morado', 'violeta']\n"
+            "['rojo', 'azul', 'verde', 'morado', 'violeta']\n",
+            "morado\n",
+            "ra\n"
           ],
           "name": "stdout"
         }
@@ -90,7 +93,7 @@
         "for color in colores:\n",
         "  print(color)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,21 +112,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "I-oiNUJ00iaT",
-        "outputId": "740bbc77-c4dc-48a0-d1fe-6764dcaa002f",
+        "outputId": "96ec2dab-26d0-4938-96d5-54a4ec3e6bb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 170
         }
       },
       "source": [
+        "print(nombre[0])\n",
+        "print(nombre[0:3])\n",
         "for letra in nombre:\n",
         "  print(letra)"
       ],
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "A\n",
+            "Alb\n",
             "A\n",
             "l\n",
             "b\n",
